--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
 	</ul>
 	<p>The link to the Firefox Manifesto is below</p> 
 	<a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a>
+	<button>Change user</button>
+	<script src="scripts/main.js"></script>
   </body>
 </html> 
