test changes actually taking effect

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
   </head>
   <body>
+  <h1> ASFFSFDSDFDSF</h1>
+  <!-- dsfdsf 
   <h1>A Lovely Icon</h1>
     <img src="images/firefox-icon.png" alt="Firefox Icon">
 	<p>In this site, you will find an icon for Firefox which is to be utitlized in my first assignement for DS4200</p>
@@ -20,5 +22,6 @@
 	<a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a>
 	<button>Change user</button>
 	<script src="scripts/main.js"></script>
+	-->
   </body>
 </html> 
